# sfmlFromScratch

./: CMakeLists.txt
src/: AIPaddle.cpp  AIPaddle.hpp  IAudioProvider.hpp  IMenu.cpp  IMenu.hpp  SFMLSoundProvider.cpp  SFMLSoundProvider.hpp  game.cpp  game.hpp  gameBall.cpp  gameBall.hpp  gameObjectManager.cpp  gameObjectManager.hpp  mainMenu.cpp  mainMenu.hpp  pang.cpp  playerPaddle.cpp  playerPaddle.hpp  serviceLocator.cpp  serviceLocator.hpp  soundFileCache.cpp  soundFileCache.hpp  splashScreen.cpp  splashScreen.hpp  stdafx.cpp  stdafx.hpp  visibleGameObject.cpp  visibleGameObject.hpp
